2008-05-18  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make the result object drop reference to the connection, if dead.

	* libpostgres.c (xr_mark): If the connection object's
	connection is dead, replace the reference to it w/ #f.
	(pg_get_connection): Update docstring.

2008-05-17  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Use GNU Libtool 2.2.2 facilities.

	* configure.in (AC_DISABLE_STATIC): Delete.
	(AC_LIBTOOL_TAGS, AC_PROG_LIBTOOL): Likewise.
	(LT_PREREQ, LT_INIT): New macro calls.
	* build-aux/aclocal-suffix: Delete file.
	* autogen.sh: Fix bug: Check for ltmain.sh in build-aux/; no longer
	append build-aux/aclocal-suffix to aclocal.m4; do "aclocal --install".

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Avoid dropdb(1) and createdb(1); use SQL commands directly.

	* configure.in (DROPDB, CREATEDB): Delete AC_CHECK_PROGS vars.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Add standard introspection support to (database postgres-meta).

	* scm/postgres-meta.scm: From module (database postgres-types),
	select also `define-db-col-type'.
	(cardinal_number): New column type specification.
	(character_data, sql_identifier): Likewise.
	(INFSCH-DEFS): New data structure: alist of information schema coldefs.
	(information-schema-names): New proc, exported.
	(information-schema-coldefs): Likewise.

	* doc/guile-pg.twerp (Standard Introspection): New node/section.
	(Funky Introspection): Likewise.
	(Introspection): Add menu for new sections.

2008-05-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Revamp "make check".

	* configure.in (AC_CONFIG_FILES): Remove test/config.scm.
	(AC_GUILE_PG_CONFIG_SCRIPT): Remove wily-guile; add test/runtest.
	* wily-guile.in: Delete file.

2008-04-28  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make gxrepl close connection when done.

	* scm/postgres-gxrepl.scm: From module (database postgres),
	select also `pg-finish'.
	(gxrepl): Do `pg-finish' prior to gc.

2008-04-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
